Fix treeview background color displaying white even though user is in dark mode

--- a/src/components/OntologyComponents/drag.tree.module.css
+++ b/src/components/OntologyComponents/drag.tree.module.css
@@ -101,7 +101,6 @@
 
 .tree {
     border-radius: 16px;
-    background: #efefef;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* IE/Edge */
 }
@@ -232,12 +231,6 @@
 
     .mobileWarning {
         display: block;
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    .tree {
-        background: transparent;
     }
 }
 
